[package]
name = "energylogger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
clap = { version="4.0.32", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.17"
mdns-sd = { version="0.5.10", default-features = false }
serde = { version="1.0.151", features = ["derive"] }
serde_json = "1.0.91"
ureq = { version="2.5.0", default-features = false, features = ["json"] }

